tests/miz/pass/parser/pass_parser_template_references_001.miz
theorem TemplateReferenceUse:
  thesis by Ref[T], mml.foo.Th[T], mml.foo.{G[T]};
